syntax = "proto3";

package org.project_planton.provider.civo.civovpc.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/civo/civovpc/v1/spec.proto";
import "org/project_planton/provider/civo/civovpc/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

// civo-vpc
message CivoVpc {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'civo.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CivoVpc'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CivoVpcSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CivoVpcStatus status = 5;
}

// civo-vpc status
message CivoVpcStatus {
  //stack-outputs
  //  civo-vpc stack-outputs
  CivoVpcStackOutputs outputs = 1;
}
